refactor: Change the name for the position tag